# openstenotype

./: .gitignore  .gitmodules  CMakeLists.txt  CTestTestfile.cmake  README.md  SPEC.md  grab.cpp
_templates/code/new/: code.ejs.t  header.ejs.t  makefile.ejs.t
cmake/: Findlogger.cmake
data/: coding.json  config.json  dictionary.json  fingerspelling.json
include/opensteno/: Command.hpp  CommandInterpreter.hpp  CommandParser.hpp  Config.hpp  DictionaryLoader.hpp  GlueCommand.hpp  Interpreter.hpp  InterpreterStub.hpp  JsonLoader.hpp  KeyMapFactory.hpp  Opensteno.hpp  Parser.hpp  StenoBoard.hpp  Stenoboard.hpp  StenoboardWindowSystemDriver.hpp  TextCommand.hpp  TextProcessor.hpp  WindowSystem.hpp  WindowSystemDriver.hpp  WindowSystemDriverHelper.hpp
source/: CMakeLists.txt  Command.cpp  CommandInterpreter.cpp  CommandParser.cpp  Config.cpp  DictionaryLoader.cpp  GlueCommand.cpp  InterpreterStub.cpp  JsonLoader.cpp  KeyMapFactory.cpp  Main.cpp  Opensteno.cpp  Parser.cpp  StenoboardWindowSystemDriver.cpp  TextCommand.cpp  TextProcessor.cpp  WindowSystem.cpp  WindowSystemDriver.cpp  WindowSystemDriverHelper.cpp  Word.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  CommandParserTest.cpp
